1.30 Not Released

 * Use the default MANIFEST.SKIP file from ExtUtils::Manifest.

 * Format CHANGES according to CPAN::Changes::Spec. Add test file
   t/release-cpan-changes.t. Truncate the CHANGES file.

 * Increment version number.

1.29 2017-02-01 pjacklam

 * Fix case in Math::String when bzero() is called as a class method.

 * Required version of Math::BigInt is now 1.999802 (was 1.87).

 * Remove Math::BigFloat from requirements in Makefile.PL, since it is bundled
   together with Math::BigInt.

 * Trim whitespace.

 * POD nits (CPAN RT #51833).

 * Fix hash randomization issues (CPAN RT #95621).

 * POD formatting and typos.

 * The NEW file now refers to the CHANGES file.

 * Revert to ExtUtils::MakeMaker since use Module::Install is discouraged.
   Change license from "gpl" to "gpl_3", since "gpl" is not a valid option for
   the license.

 * Switch from Test to Test::More in t/stringpm.t for better testing
   functionality and easier debugging.

 * Fix flawed tests.

1.28 2008-04-03 Tels 662 tests

 * do not use "lib => GMP", instead let the user decide which lib we take

 * bundle Module::Install and amend Makefile.PL

 * require Math::BigInt v1.87